# erevive-nw

./: .gitignore  Makefile  progress.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test.db
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: base.py  factory.py  prompts.py
backend/app/ai/providers/: claude.py  gemini.py  lmstudio.py  openai_provider.py
backend/app/api/v1/: admin.py  auth.py  donate.py  health.py  items.py  pickups.py  router.py  users.py
backend/app/core/: audit.py  exceptions.py  security.py  token_blacklist.py  vault_client.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1ffc910377e6_add_items_images_pickups_price_lookups.py  a3c03462ccbe_initial_users_and_audit_log.py
backend/app/models/: __init__.py  audit_log.py  base.py  item.py  pickup.py  price_lookup.py  user.py
backend/app/schemas/: auth.py  item.py  pickup.py  pricing.py  user.py
backend/app/services/: auth_service.py  image_service.py  item_service.py  pickup_service.py  pricing_service.py
backend/app/storage/: base.py  local.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_endpoints.py  test_auth_endpoints.py  test_donate_endpoints.py  test_item_endpoints.py  test_pickup_endpoints.py
backend/tests/unit/: test_ai_providers.py  test_auth_service.py  test_health.py  test_security.py
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  (+1 more)
(+74 files in other folders)
